--- a/zeppelin-web/src/app/jobmanager/job/job.html
+++ b/zeppelin-web/src/app/jobmanager/job/job.html
@@ -12,41 +12,41 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 
-<div class="job">
+<div class="job" >
   <div>
     <!-- job control: start -->
-    <div id="{{notebookJob.noteId}}_control" class="control">
-      <span ng-bind="lastExecuteTime(notebookJob.unixTimeLastRun)"></span>
+    <div id="{{$ctrl.getNoteId()}}_control" class="control">
+      <span ng-bind="$ctrl.lastExecuteTime()"></span>
       <span>
-        <span ng-bind="notebookJob.isRunningJob ? 'RUNNING' : 'READY'"></span>
+        <span ng-bind="$ctrl.isRunning() ? 'RUNNING' : 'READY'"></span>
       </span>
 
-      <span ng-if="notebookJob.isRunningJob" ng-bind="getProgress()"></span>
+      <span ng-if="$ctrl.isRunning()" ng-bind="$ctrl.getProgress()"></span>
 
       <span
         class="job-control-btn" tooltip-placement="left"
-        uib-tooltip-html="!notebookJob.isRunningJob ? 'Start All Paragraphs' : 'Stop All Paragraphs'"
-        ng-click="!notebookJob.isRunningJob ? runNotebookJob(notebookJob.noteId) : stopNotebookJob(notebookJob.noteId)"
-        ng-class="!notebookJob.isRunningJob ? 'icon-control-play' : 'icon-control-pause'">
+        uib-tooltip-html="!$ctrl.isRunning() ? 'Start All Paragraphs' : 'Stop All Paragraphs'"
+        ng-click="!$ctrl.isRunning() ? $ctrl.runJob() : $ctrl.stopJob()"
+        ng-class="!$ctrl.isRunning() ? 'icon-control-play' : 'icon-control-pause'">
       </span>
     </div>
     <!-- job control: end -->
 
     <span class="job-types">
-      <i ng-class="getJobTypeIcon()"></i>
+      <i ng-class="$ctrl.getJobTypeIcon()"></i>
     </span>
-    <a style="text-decoration: none !important;" ng-href="#/notebook/{{notebookJob.noteId}}">
-      <span>{{notebookJob.noteName}} - </span>
-      <span ng-style="getInterpreterNameStyle()"
-            ng-bind="getInterpreterName()">
+    <a style="text-decoration: none !important;" ng-href="#/notebook/{{$ctrl.getNoteId()}}">
+      <span ng-bind="$ctrl.getNoteName() + ' - '"></span>
+      <span ng-style="$ctrl.getInterpreterNameStyle()"
+            ng-bind="$ctrl.getInterpreterName()">
       </span>
     </a>
     <!-- job progress bar: start -->
-    <div id="{{notebookJob.noteId}}_runControl" class="runControl">
-      <div id="{{notebookJob.noteId}}_progress" class="progress" ng-if="notebookJob.isRunningJob === true">
+    <div id="{{$ctrl.getNoteId()}}_runControl" class="runControl">
+      <div id="{{$ctrl.getNoteId()}}_progress" class="progress" ng-if="$ctrl.isRunning() === true">
         <div class="progress-bar" role="progressbar"
-             ng-style="showPercentProgressBar ? { 'width': getProgress() } : { 'width': '100%' }"
-             ng-class="showPercentProgressBar ? '' : 'progress-bar-striped active'">
+             ng-style="$ctrl.showPercentProgressBar() ? { 'width': $ctrl.getProgress() } : { 'width': '100%' }"
+             ng-class="$ctrl.showPercentProgressBar() ? '' : 'progress-bar-striped active'">
         </div>
       </div>
     </div>
@@ -54,15 +54,16 @@ limitations under the License.
   </div>
 
   <div>
-    <span ng-repeat="paragraphJob in notebookJob.paragraphs">
+    <span ng-repeat="paragraph in $ctrl.getParagraphs()">
       <a style="text-decoration: none !important;"
-         ng-href="#/notebook/{{notebookJob.noteId}}?paragraph={{paragraphJob.id}}">
-        <i ng-style="{'color': $parent.getJobColorByStatus(paragraphJob.status)}"
-           ng-class="$parent.getJobIconByStatus(paragraphJob.status)"
+         ng-href="#/notebook/{{$ctrl.getNoteId()}}?paragraph={{paragraph.id}}">
+        <i ng-style="{'color': $ctrl.getJobColorByStatus(paragraph.status)}"
+           ng-class="$ctrl.getJobIconByStatus(paragraph.status)"
            tooltip-placement="top-left"
-           uib-tooltip="{{paragraphJob.name}} is {{paragraphJob.status}}">
+           uib-tooltip="{{paragraph.name}} is {{paragraph.status}}">
         </i>
       </a>
     </span>
   </div>
 </div>
+
